--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f96a2">  <td>21/09/28 15:28:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelDataProvider.test1(java.lang.String,java.lang.String)[pri:0, instance:utils.ExcelDataProvider@37afeb11]">test1</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>21/09/28 15:28:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelDataProvider.test1(java.lang.String,java.lang.String)[pri:0, instance:utils.ExcelDataProvider@37afeb11]">test1</td> 
-  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>21/09/28 15:28:32</td>   <td>-9925</td> <td>&nbsp;</td><td title="&gt;&gt;ExcelDataProvider.setUpTest()[pri:0, instance:utils.ExcelDataProvider@37afeb11]">&gt;&gt;setUpTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@728885526</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>21/09/28 15:28:45</td>   <td>3227</td> <td>&nbsp;</td><td title="&lt;&lt;ExcelDataProvider.tearDown()[pri:0, instance:utils.ExcelDataProvider@37afeb11]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@728885526</td>   <td></td> </tr>
+<tr bgcolor="9f96a2">  <td>21/09/30 15:46:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test1()[pri:0, instance:listeners.TestNGListenerDemo@1dde4cb2]">test1</td> 
+  <td>main@1083021083</td>   <td></td> </tr>
+<tr bgcolor="9f96a2">  <td>21/09/30 15:46:53</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test3()[pri:0, instance:listeners.TestNGListenerDemo@1dde4cb2]">test3</td> 
+  <td>main@1083021083</td>   <td></td> </tr>
+<tr bgcolor="9f96a2">  <td>21/09/30 15:46:53</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test2()[pri:0, instance:listeners.TestNGListenerDemo@1dde4cb2]">test2</td> 
+  <td>main@1083021083</td>   <td></td> </tr>
 </table>
