--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,8 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>AllClassTests</td><td>TestngGroupsDemo.test1()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test6()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test2()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test3()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test4()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test5()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+<tr><td>linux.regression</td><td>TestngGroupsDemo.test6()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+<tr><td>regression</td><td>TestngGroupsDemo.test3()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+<tr><td>sanity</td><td>TestngGroupsDemo.test1()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test2()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/>TestngGroupsDemo.test3()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+<tr><td>smoke</td><td>TestngGroupsDemo.test2()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+<tr><td>windows.regression</td><td>TestngGroupsDemo.test5()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]<br/></td></tr>
+</table>
