--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>listeners.TestNGListenerDemo2</td>
+<td>groups.TestngGroupsDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,45 +12,33 @@
 <tr>
 <td>&nbsp;</td>
 <td>test4</td>
-<td>&nbsp;</td></tr>
+<td>AllClassTests </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>test5</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test6</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>listeners.TestNGListenerDemo</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
+<td>windows.regression AllClassTests </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>test2</td>
-<td>&nbsp;</td></tr>
+<td>smoke sanity AllClassTests </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>test3</td>
-<td>&nbsp;</td></tr>
+<td>regression sanity AllClassTests </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test6</td>
+<td>linux.regression AllClassTests </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>test1</td>
-<td>&nbsp;</td></tr>
+<td>sanity AllClassTests </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
