--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5ccac">  <td>21/10/01 06:16:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test3()[pri:0, instance:listeners.TestNGListenerDemo@72057ecf]">test3</td> 
-  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>21/10/01 06:16:05</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo2.test6()[pri:0, instance:listeners.TestNGListenerDemo2@14dd9eb7]">test6</td> 
-  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>21/10/01 06:15:50</td>   <td>-14584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test1()[pri:0, instance:listeners.TestNGListenerDemo@72057ecf]">test1</td> 
-  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>21/10/01 06:16:05</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo2.test5()[pri:0, instance:listeners.TestNGListenerDemo2@14dd9eb7]">test5</td> 
-  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>21/10/01 06:16:05</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo.test2()[pri:0, instance:listeners.TestNGListenerDemo@72057ecf]">test2</td> 
-  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>21/10/01 06:16:05</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGListenerDemo2.test4()[pri:0, instance:listeners.TestNGListenerDemo2@14dd9eb7]">test4</td> 
-  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test2()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test2</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test6()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test6</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test3()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test3</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test4()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test4</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test5()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test5</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test1()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test1</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
 </table>
