--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test2()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test2</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test6()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test6</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test3()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test3</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test4()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test4</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test5()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test5</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>21/10/05 16:27:10</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngGroupsDemo.test1()[pri:0, instance:groups.TestngGroupsDemo@6973b51b]">test1</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="9f96a2">  <td>21/10/08 07:39:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngParametersDemo.test(java.lang.String)[pri:0, instance:testng.TestngParametersDemo@3835c46]">test</td> 
+  <td>main@678433396</td>   <td></td> </tr>
 </table>
